index for html and css updated or added to

--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-    Testing
+    <head>
+        <title>Mole Treasure Hunt</title>
+        Testing
+    </head>
+    
 </html>
