--- a/question1.html
+++ b/question1.html
@@ -1,4 +1,86 @@
 <!DOCTYPE>
 <html>
-    Redirected to questions1
+    <head>
+        <title>Mole Treasure Hunt</title>
+    </head>
+    <link href = "animate.css" rel="stylesheet">
+    <style type = "text/css">
+        body{
+            background-image: url(GreatSea.jpg);
+            overflow:hidden;
+        }
+        .question1{
+            font-family: "Arial", sans-serif;
+            color:gold;
+            margin: 0px auto 50px auto;
+            -webkit-animation-duration: 1s;
+            -webkit-animation-delay: 1s;
+        }
+        .gold{
+            width: auto;
+            height: auto;
+            max-height: 280px;
+            max-width: 322px;
+            margin: 0px auto 100px auto;
+            -webkit-animation-duration: 1s;
+            -webkit-animation-delay: 1s;
+        }
+        .button {
+            margin: 0px auto 0px auto;
+            -webkit-animation-duration: 1s;
+            -webkit-animation-delay: 2s;
+  display: inline-block;
+  padding: 15px 25px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+        .button:hover {background-color: #3e8e41}
+
+.button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+    
+        .button2 {
+            margin: 0px auto 0px auto;
+            -webkit-animation-duration: 1s;
+            -webkit-animation-delay: 3s;
+            display: inline-block;
+  padding: 15px 25px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+
+}
+        .button2:hover {background-color: #3e8e41}
+
+.button2:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+    </style>
+    <body>
+        <center>
+        <div class="gold animated bounceInUp"><img src="Gold.jpg"></div>
+        <div class="question1 animated bounceInDown"><center><h1>What is Gold's Atomic Number?</h1></center></div>
+        <a href="question2.html"><button class="button animated bounceInUp">79</button></a>
+        <a href="wrong.html"><button class="button2 animated bounceInUp">196.97</button></a></center>
+    </body>
 </html>
