--- a/question3.html
+++ b/question3.html
@@ -79,8 +79,8 @@
     <body>
         <center>
         <div class="picture animated bounceInUp"><img src="Atom.png"></div>
-        <div class="question1 animated bounceInDown"><center><h1>True or False: Electrons have a positive charge.</h1></center></div>
-        <a href="wrong.html"><button class="button animated bounceInUp">True</button></a>
-        <a href="question3.html"><button class="button2 animated bounceInUp">False</button></a></center>
+        <div class="question1 animated bounceInDown"><center><h1>What orbits the nucleus of an atom?</h1></center></div>
+        <a href="wrong.html"><button class="button animated bounceInUp">Protons</button></a>
+        <a href="question4.html"><button class="button2 animated bounceInUp">Electrons</button></a></center>
     </body>
 </html>
