--- a/question5.html
+++ b/question5.html
@@ -78,9 +78,9 @@
     </style>
     <body>
         <center>
-        <div class="picture animated bounceInUp"><img src="Atom.png"></div>
-        <div class="question1 animated bounceInDown"><center><h1>True or False: Electrons have a positive charge.</h1></center></div>
-        <a href="wrong.html"><button class="button animated bounceInUp">True</button></a>
-        <a href="question3.html"><button class="button2 animated bounceInUp">False</button></a></center>
+        <div class="picture animated bounceInUp"><center><img src="H2O.png"></center></div>
+        <div class="question1 animated bounceInDown"><center><h1>What is H2O more commonly known as?</h1></center></div>
+        <a href="question6.html"><button class="button animated bounceInUp">Water</button></a>
+        <a href="wrong.html"><button class="button2 animated bounceInUp">2 Hydrogens + 1 Oxygen</button></a></center>
     </body>
 </html>
