--- a/question6.html
+++ b/question6.html
@@ -21,7 +21,7 @@
             height: auto;
             max-height: 280px;
             max-width: 322px;
-            margin: 0px auto 0px auto;
+            margin: 0px auto 175px auto;
             -webkit-animation-duration: 1s;
             -webkit-animation-delay: 1s;
         }
@@ -78,9 +78,9 @@
     </style>
     <body>
         <center>
-        <div class="picture animated bounceInUp"><img src="Atom.png"></div>
-        <div class="question1 animated bounceInDown"><center><h1>True or False: Electrons have a positive charge.</h1></center></div>
-        <a href="wrong.html"><button class="button animated bounceInUp">True</button></a>
-        <a href="question3.html"><button class="button2 animated bounceInUp">False</button></a></center>
+        <div class="picture animated bounceInUp"><center><img src="Periodic_Table.jpg"></center></div>
+        <div class="question1 animated bounceInDown"><center><h1>What is the 19th element on the periodic table?</h1></center></div>
+        <a href="finalquestion.html"><button class="button animated bounceInUp">Potassium</button></a>
+        <a href="wrong.html"><button class="button2 animated bounceInUp">Platinum</button></a></center>
     </body>
 </html>
