--- a/wrong.html
+++ b/wrong.html
@@ -48,7 +48,7 @@ align-self: center;
     </style>
     <body>
         <div class ="WalkPlank animated bounceInDown"><center><img src="WalkThePlank.jpg"></center></div>
-        <div class ="PirateTalk animated bounceInDown"><center><h1>Arg! Ye got the question wrong! Time to walk the blank matey!</h1></center></div>
+        <div class ="PirateTalk animated bounceInDown"><center><h1>Arg! Ye got the question wrong! Time to walk the plank matey!</h1></center></div>
         <a href="index.html"><center><button class="button animated bounceInUp">Go Back To Start</button></center></a>
     </body>
 </html>
