--- a/question4.html
+++ b/question4.html
@@ -21,7 +21,9 @@
             height: auto;
             max-height: 280px;
             max-width: 322px;
-            margin: 0px auto 0px auto;
+            margin-left: auto;
+    margin-right: auto;
+            margin: 0px auto 150px auto;
             -webkit-animation-duration: 1s;
             -webkit-animation-delay: 1s;
         }
@@ -78,9 +80,9 @@
     </style>
     <body>
         <center>
-        <div class="picture animated bounceInUp"><img src="Atom.png"></div>
-        <div class="question1 animated bounceInDown"><center><h1>True or False: Electrons have a positive charge.</h1></center></div>
-        <a href="wrong.html"><button class="button animated bounceInUp">True</button></a>
-        <a href="question3.html"><button class="button2 animated bounceInUp">False</button></a></center>
+        <div class="picture animated bounceInUp"><center><img src="Atom2.jpg"></center></div>
+        <div class="question1 animated bounceInDown"><center><h1>What is the center of an atom called?</h1></center></div>
+        <a href="question5.html"><button class="button animated bounceInUp">Nucleous</button></a>
+        <a href="wrong.html"><button class="button2 animated bounceInUp">Nucleolus</button></a></center>
     </body>
 </html>
