--- a/question4.html
+++ b/question4.html
@@ -82,7 +82,7 @@
         <center>
         <div class="picture animated bounceInUp"><center><img src="Atom2.jpg"></center></div>
         <div class="question1 animated bounceInDown"><center><h1>What is the center of an atom called?</h1></center></div>
-        <a href="question5.html"><button class="button animated bounceInUp">Nucleous</button></a>
+        <a href="question5.html"><button class="button animated bounceInUp">Nucleus</button></a>
         <a href="wrong.html"><button class="button2 animated bounceInUp">Nucleolus</button></a></center>
     </body>
 </html>
