--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@ align-self: center;
     </style>
     <body>
     <div class = "Molie animated bounceInDown"><img src=Molie_The_Pirate.jpg></div>
-    <div class = "text animated bounceInRight"><center><h1 style="color:black;">Argg! Welcome to Molie The Pirate's Quiz Adventure.</h1></center></div>
+    <div class = "text animated bounceInRight"><center><h1 style="color:black;">Argg! Welcome to Molebeard's Quiz Adventure.</h1></center></div>
     <div class = "question animated bounceInUp"><center><h2>Will you be able to make it through his maze of Chemistry questions? Or will you be walking the blank? Click the button to go to the first question.</h2></center></div>
-    <div class = "question2 animated bounceInUp"><center><h2>Answer all 7 questions correctly, and you will be set free and have all of Molie's gold!</h2></center></div>
+    <div class = "question2 animated bounceInUp"><center><h2>Answer all 7 questions correctly, and you will be set free and have all of Molebeard's gold!</h2></center></div>
     <a href="question1.html"><center><button class="button animated bounceInUp">Go to Question 1</button></center></a>
     </body>
         </html>
