--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <body>Hey. This is a test.</body>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <h1>This is a test of CSS.</h1>
+    <p>This is a test of css again.</p>
 </html>
