--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE HTML>
 <html>
-    <body>Hey. This is a test.</body>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <h1>This is a test of CSS.</h1>
-    <p>This is a test of css again.</p>
+<body>
+    <div id="main">
+    <b><center><p id="typing_text"></p></center></b>
+    </div>
+
+<script src="jquery-3.2.0.js"></script>
+<script src="typed.js"></script>
+    <script>
+    $(function(){
+		$("#typing_text").typed({
+			strings: ["Hey. ^500", "Glad to see you made it. ^1000", "The name is Chris.", "Chris Sheridan to be exact.", "Click me to head to my Portfolio."],
+			typeSpeed: 0,
+            showCursor: true,
+            callback: function() {
+      $('#typing_text').html('<a href="portfolio.html"style="color: #FFFFFF; text-decoration: none;">' + $('#typing_text').html() + '</a>')}
+		});
+	});
+    </script>
+</body>
 </html>
