Added a bunch of things

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,18 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-    <body><b>Hey. This is a test.</b></body>
-    <link rel="stylesheet" type="text/css" href="style2.css">
-    <h1><center>This is a test of CSS.</center></h1>
-    <p><b>This is a test of css again.</b></p>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <center><p>This site is currently being worked on.</p></center>
+    <center><p2>Thanks for being interested in this site. Come back later.</p2></center>
 </html>
-<script src="typed.js"></script>
-<script>
-  document.addEventListener('DOMContentLoaded', function(){
-      Typed.new('.element', {
-        strings: ["First sentence. ^1000", "Second sentence."],
-        typeSpeed: 0
-      });
-  });
-</script>
-
-<div class="element"></div>
