--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+    <title>Chris Sheridan Portfolio</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 <body>
     <div id="main">
